# ParticlesWIthOpenCV

./: CMakeLists.txt  README.md  main.cpp
headers/: Constants.hpp  Fruit.hpp  Game.hpp  TrailEffect.hpp
src/: Fruit.cpp  Game.cpp  TrailEffect.cpp  main.cpp
